<resources>
    <string name="appName">FOUNTAIN&amp;GO</string>
    <string name="sloganName">Date amor, bebe agua</string>
    <string name="userName">EMAIL</string>
    <string name="userPass">CONTRASEÑA</string>
    <string name="access">ACCEDER</string>
    <string name="createAcc">CREAR UNA CUENTA</string>
    <string name="noAcc">PROCEDER SIN IDENTIFICARSE</string>
    <string name="regName">Nombre (Obligatorio)</string>
    <string name="regSurname">Apellidos (Obligatorio)</string>
    <string name="regUser">Usuario (Obligatorio)</string>
    <string name="regPass">Contraseña (Obligatorio)</string>
    <string name="regPass2">Confirmar contraseña</string>
    <string name="regEmail">Email (Obligatorio)</string>
    <string name="register">REGISTRARSE</string>
    <string name="alreadyAcc">¿Ya tienes cuenta? INICIA SESIÓN</string>
    <string name="xd">FOUNTAIN\n&amp;GO</string>
    <string name="profileEmail">Correo electrónico</string>
    <string name="profileSurname">Apellidos</string>
    <string name="closeSession">Cerrar sesión</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fuente1">Fuente Negra</string>
    <string name="fuente2">Fuente Blanca</string>
    <string name="dir1">14 C. de Bailén</string>
    <string name="cp">28013</string>
    <string name="mad">Madrid</string>
    <string name="guest">Guest</string>
    <string name="guestTiny">guest</string>
    <string name="inviteRegister">¿Aún no te has registrado?</string>
    <string name="inviteRegisterButton">Regístrate</string>
    <string name="inviteLogin">Si ya tienes una cuenta, </string>
    <string name="inviteLoginButton">inicia sesión</string>
    <string name="apply">APLICAR CAMBIOS</string>
    <string name="back">REGRESAR</string>
    <string name="fontName">Nombre de la fuente</string>
    <string name="fontDir">Dirección</string>
    <string name="fontCP">Código postal</string>
    <string name="fontCity">Provincia</string>
    <string name="send">ENVIAR</string>
    <string name="alert">Muchas gracias por enviar esta sugerencia de fuente, procederemos con su revisión y se agregará en caso de verificarse la información.</string>
    <string name="add">AGREGAR</string>
    <string name="lat">Latitud</string>
    <string name="longi">Longitud</string>
</resources>